# runx

./: .gitignore  .runxrc  Cargo.toml  LICENSE  README.md  demo.tape  install.sh
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
src/: cache.rs  clean.rs  cli.rs  config.rs  download.rs  environment.rs  error.rs  executor.rs  init.rs  install.rs  list.rs  lockfile.rs  main.rs  platform.rs  plugin.rs  run.rs  update.rs  version.rs
src/provider/: bun.rs  deno.rs  go.rs  java.rs  mod.rs  node.rs  python.rs  ruby.rs  rust.rs
