[package]
name = "runx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
dirs = "6"
flate2 = "1"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["stream"] }
semver = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
zip = "4"
